# axum-production

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: error.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
