[package]
name = "axum-fullstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = "0.6.20"
serde = { version = "1.0.191" , features = ["derive"]}
serde_json = "1"
serde_with="3.4.0"
tower-http = {version ="0.4.4", features = ["fs"]}
tower-cookies = "0.9.0"
lazy-regex = "3.1.0"
async-trait = "0.1.74"
strum_macros = "0.25.3"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
chrono = "0.4.31"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
